--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head>
     
-<title> Different Backing Options for Custom Embroidered Patches UK: Sew-On, Iron-On & More </title>
-  <meta name="description" content="Explore the various backing options for custom embroidered patches UK, including sew-on, iron-on, Velcro, and adhesive backings. Find out which backing suits your patch">
+<title> Different Backing Options for Custom Embroidered Patches UK </title>
+  <meta name="description" content="Explore the various backing options for custom embroidered patches UK, including sew-on, iron-on, Velcro, and adhesive backings">
   <link rel="canonical" href="https://customeembroideredpatches.vercel.app">
     
 <script type="application/ld+json">
