--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <h1> Different Backing Options for Custom Embroidered Patches UK </h1>
   
-<p>When ordering&nbsp;<a href="https://customembroideredpatchesuk.co.uk/">custom emrbroidered patches UK</a>, one important factor to consider is the type of backing. The backing determines how your patch attaches to clothing or accessories and affects durability and flexibility. Whether you prefer a permanent sew-on patch or a removable Velcro-backed option, choosing the right backing enhances your patch&rsquo;s performance and appearance.</p>
+<p>When ordering&nbsp;<a href="https://customembroideredpatchesuk.co.uk/">custom embroidered patches UK</a>, one important factor to consider is the type of backing. The backing determines how your patch attaches to clothing or accessories and affects durability and flexibility. Whether you prefer a permanent sew-on patch or a removable Velcro-backed option, choosing the right backing enhances your patch&rsquo;s performance and appearance.</p>
   
 <div style="text-align: center;">
 <img src="https://i.postimg.cc/3RW4kMSf/1-2.jpg" alt="patches.jpg" style="max-width: 100%; height: auto;">
