--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 <p><strong>Q: What backing should I choose for a beginner looking to apply patches at home?</strong>A: Iron-on is the simplest to apply without special skills or tools.</p>
 <hr>
 <h2>Conclusion</h2>
-<p>Choosing the right backing for your custom emrbroidered patches UK is essential to maximize their effectiveness and lifespan. From the classic and reliable sew-on patches to the quick and easy iron-on options, and the ultra-flexible Velcro backing, each type serves different needs and preferences. Understanding these options helps you match the perfect patch backing to your garments or gear, ensuring your patches look great and stay secure. For a deeper dive into patch production, read "How Are Custom Embroidered Patches Made in the UK? Step-by-Step Guide." Ready to explore options or place an order? Visit customembroideredpatchesuk.co.uk for expert advice and quality service tailored to your needs.</p>
+<p>Choosing the right backing for your custom emrbroidered patches UK is essential to maximize their effectiveness and lifespan. From the classic and reliable sew-on patches to the quick and easy iron-on options, and the ultra-flexible Velcro backing, each type serves different needs and preferences. Understanding these options helps you match the perfect patch backing to your garments or gear, ensuring your patches look great and stay secure. For a deeper dive into patch production, read "How Are <a href="https://share.google/J0oBlGXaCYeuRl3Q0">Custom Embroidered Patches</a> Made in the UK? Step-by-Step Guide." Ready to explore options or place an order? Visit customembroideredpatchesuk.co.uk for expert advice and quality service tailored to your needs.</p>
 
 
 
